# PlotMapAI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  manifest.webmanifest  package-lock.json  package.json  playwright.config.ts  playwright.manual.config.ts  registerSW.js  sw.js  tsconfig.app.json  tsconfig.eslint.json  tsconfig.playwright.json  vite.config.ts  vitest.config.ts
analysis/: bundle-budget-report.json
app/: .env.example  __init__.py  config.py  database.py  models.py  pyproject.toml  run.py
app/resources/: default_toc_rules.json
app/routes/: novels.py  reader.py  settings.py
app/services/: ai_analysis.py  chapter_detector.py  encoding.py  epub_parser.py  purifier.py  txt_parser.py
app/tests/: test_ai_analysis.py  test_analysis_runner.py  test_analysis_settings.py  test_chapter_detector.py  test_encoding.py  test_epub_parser.py  test_novel_deletion.py  test_purifier.py  test_routes_analysis.py  test_routes_novels.py  test_routes_reader.py  test_routes_settings.py  test_txt_parser.py
assets/: BookDetailPage-A4421RnC.js  BookDetailPage-BASI0GLV.js  BookDetailPage-BVG4OLdc.js  BookDetailPage-BXFsUGF-.js  BookDetailPage-BgVqaOKV.js  BookDetailPage-BsfWGnoQ.js  BookDetailPage-ByX5hF2U.js  BookDetailPage-CA07yWOo.js  BookDetailPage-CMVrJ4Rt.js  BookDetailPage-CMwizc_D.js  BookDetailPage-CNffzi_y.js  BookDetailPage-CafdcO9l.js  BookDetailPage-CfsZeXEe.js  BookDetailPage-ChQ8yuHE.js  BookDetailPage-ClJKeoEo.js  BookDetailPage-CmOt6uZ-.js  BookDetailPage-D-D-FqNj.js  BookDetailPage-D9k3nAPh.js  (+460 more)
(+1088 files in other folders)
